# substrate-node-template

./: .gitignore  Cargo.toml  README.md
junius/: Dockerfile  build_docker.sh  config.toml  docker-compose.yml  local.yaml  setup.md  start-local.sh  start.md  zombie-config.toml
node/: Cargo.toml
node/src/: benchmarking.rs  extra_thread.rs  lib.rs  main.rs  service.rs
pallets/kitties/: Cargo.toml  expand.rs
pallets/kitties/src/: lib.rs  mock.rs  tests.rs
pallets/kitties/src/migrations/: v1.rs
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/trial/: Cargo.toml  README.md  expand.rs
pallets/trial/src/: lib.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: expand.rs  lib.rs
